CLIENT: Refactor API class
Signed-off-by: Xess1407 <evanclausse@yahoo.fr>

--- a/client/makefile
+++ b/client/makefile
@@ -1,7 +1,9 @@
 CXX = g++
 MAKE = make
 
-CXXFLAGS = -std=c++17 -Wall
+CXXFLAGS = -std=c++17 -lcpr -Wall
+CXXDEBUGFLAGS = -g
+CXXRELEASEFLAGS = -03
 
 SRCDIR = src/
 BINDIR = bin/
@@ -14,10 +16,10 @@ OBJ = $(subst $(SRCDIR), $(BINDIR), $(SRC:.cpp=.o))
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CXX) -o $@ $^ $(CXXFLAGS)
+	$(CXX) -o $@ $^ $(CXXFLAGS) $(CXXDEBUGFLAGS)
 
 $(BINDIR)%.o : $(SRCDIR)%.cpp
-	$(CXX) -c $^ -o $@ $(CXXFLAGS)
+	$(CXX) -c $^ -o $@ $(CXXFLAGS) $(CXXDEBUGFLAGS)
 
 run : 
 	./$(TARGET)
