CLIENT: Add Reverse Shell
Signed-off-by: Xess1407 <evanclausse@yahoo.fr>

--- a/client/makefile
+++ b/client/makefile
@@ -1,7 +1,7 @@
 CXX = g++
 MAKE = make
 
-CXXFLAGS = -std=c++17 -lcpr -Wall
+CXXFLAGS = -std=c++17 -lcpr -pthread -Wall
 CXXDEBUGFLAGS = -g
 CXXRELEASEFLAGS = -03
 
